# pipefy-sdk

./: .env  .gitignore  Makefile  pyproject.toml  settings.toml
pipefy/: client.py  settings.py
pipefy/api/: cards.py  client.py  pipe.py
pipefy/infrastructure/configuration/: conf.py  settings.toml
pipefy/models/: __init__.py  cards.py  message.py  pipe.py
tests/: __init__.py  test_pipefy_sdk.py
