[tool.poetry]
name = "pipefy-sdk"
version = "0.1.0"
description = "Python sdk to use the pipefy api"
authors = ["Alefh Sousa <oi@alefh.com>"]

[tool.poetry.dependencies]
python = "^3.8"
returns = "^0.19.0"
gql = "^3.4.0"
requests = "^2.28.2"
requests-toolbelt = "^0.10.1"
dynaconf = "^3.1.11"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
safety = "^2.3.5"
black = "22.12.0"
mypy = "^1.0.1"

[build-system]
requires = ["poetry-core>=1.5.1"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
target-version = ['py38']
